restarted working on librav

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ set(CMAKE_BUILD_TYPE Debug)
 
 ## Optionally built modules: ON/OFF
 set(ENABLE_LOGGING ON)
-set(BUILD_TESTS ON)
+set(BUILD_TESTS OFF)
 
 if(ENABLE_LOGGING)
 	message( "-- Enable logging with spdlog -- Yes" )
