--- a/src/navigation/CMakeLists.txt
+++ b/src/navigation/CMakeLists.txt
@@ -2,6 +2,6 @@ cmake_minimum_required(VERSION 3.0.0)
 project(librav_nav)
 
 ## Add sub source directories
-add_subdirectory(aerial)
+# add_subdirectory(aerial)
 add_subdirectory(ground)
 add_subdirectory(navviz)
