--- a/src/platforms/CMakeLists.txt
+++ b/src/platforms/CMakeLists.txt
@@ -2,6 +2,6 @@ cmake_minimum_required(VERSION 3.0.0)
 project(librav_platforms)
 
 ## Add sub source directories
-add_subdirectory(quadrotor)
+# add_subdirectory(quadrotor)
 add_subdirectory(rc_car)
 add_subdirectory(simulator)
