--- a/src/lightview/apps/CMakeLists.txt
+++ b/src/lightview/apps/CMakeLists.txt
@@ -2,8 +2,8 @@
 #find_package(LIBRARY_NAME REQUIRED)
 
 ## tests
-# add_executable(app_traffic_viewer app_traffic_viewer.cpp)
-# target_link_libraries(app_traffic_viewer trafficsim_viewer)
+add_executable(app_traffic_viewer app_traffic_viewer.cpp)
+target_link_libraries(app_traffic_viewer lightview trafficsim_viewer)
 
-# add_executable(app_traffic_viewer_loop app_traffic_viewer_loop.cpp)
-# target_link_libraries(app_traffic_viewer_loop trafficsim_viewer)
+add_executable(app_traffic_viewer_loop app_traffic_viewer_loop.cpp)
+target_link_libraries(app_traffic_viewer_loop lightview trafficsim_viewer)
