--- a/src/lightview/tests/CMakeLists.txt
+++ b/src/lightview/tests/CMakeLists.txt
@@ -14,5 +14,5 @@ target_link_libraries(test_imgui imgui)
 add_executable(test_pose_viewer test_pose_viewer.cpp)
 target_link_libraries(test_pose_viewer pose_viewer)
 
-add_executable(test_nana_gui test_nana_gui.cpp)
-target_link_libraries(test_nana_gui nana -pthread)
+# add_executable(test_nana_gui test_nana_gui.cpp)
+# target_link_libraries(test_nana_gui nana -pthread)
