saved work on asyncio

--- a/src/kernel/device/CMakeLists.txt
+++ b/src/kernel/device/CMakeLists.txt
@@ -1,6 +1,7 @@
 ## Add sub source directories
 add_subdirectory(driver/socketcan)
 add_subdirectory(driver/async_serial)
+add_subdirectory(driver/asyncio)
 add_subdirectory(sensor/imu)
 add_subdirectory(sensor/gps)
 # add_subdirectory(sensor/camera)
