--- a/tests/unit_tests/CMakeLists.txt
+++ b/tests/unit_tests/CMakeLists.txt
@@ -3,14 +3,14 @@ include_directories(${GTEST_INCLUDE_DIRS})
 ## Test modules
 # graph
 set(GRAPH_GTEST_SRC
-    src/graph/graph_bigfive_test.cpp
-    src/graph/graph_type_test.cpp
-    src/graph/graph_mod_test.cpp
-    src/graph/graph_iter_test.cpp
-    src/graph/graph_search_test.cpp
-    src/graph/graph_search_inc_test.cpp
-    src/graph/tree_bigfive_test.cpp
-    src/graph/tree_mod_test.cpp
+    graph/graph_bigfive_test.cpp
+    graph/graph_type_test.cpp
+    graph/graph_mod_test.cpp
+    graph/graph_iter_test.cpp
+    graph/graph_search_test.cpp
+    graph/graph_search_inc_test.cpp
+    graph/tree_bigfive_test.cpp
+    graph/tree_mod_test.cpp
 )
 set(GRAPH_GTEST_LIB graph)
 add_executable(gtest_graph ${GRAPH_GTEST_SRC})
@@ -18,8 +18,8 @@ target_link_libraries(gtest_graph gtest gtest_main ${GRAPH_GTEST_LIB})
 
 # geometry
 set(GEOMETRY_GTEST_SRC
-    src/geometry/cspline_test.cpp
-    src/geometry/polynomial_test.cpp
+    geometry/cspline_test.cpp
+    geometry/polynomial_test.cpp
 )
 set(GEOMETRY_GTEST_LIB geometry)
 add_executable(gtest_geometry ${GEOMETRY_GTEST_SRC})
@@ -27,8 +27,8 @@ target_link_libraries(gtest_geometry gtest gtest_main ${GEOMETRY_GTEST_LIB})
 
 # markov
 set(MARKOV_GTEST_SRC
-    src/markov/markov_chain_test.cpp
-    src/markov/markov_chain_x_test.cpp
+    markov/markov_chain_test.cpp
+    markov/markov_chain_x_test.cpp
 )
 set(MARKOV_GTEST_LIB markov)
 add_executable(gtest_markov ${MARKOV_GTEST_SRC})
