--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,5 +4,5 @@ add_subdirectory(modules)
 add_subdirectory(third_party)
 
 # Packages built on top of modules
-# add_subdirectory(navigation)
+add_subdirectory(navigation)
 # add_subdirectory(lightview)
