--- a/src/navigation/ground/prediction/apps/CMakeLists.txt
+++ b/src/navigation/ground/prediction/apps/CMakeLists.txt
@@ -3,7 +3,7 @@
 
 ## tests
 add_executable(app_calc_transition app_calc_transition.cpp)
-target_link_libraries(app_calc_transition threatdist navviz utils)
+target_link_libraries(app_calc_transition threatdist utils)
 
 add_executable(app_calc_interval_trans app_calc_interval_trans.cpp)
-target_link_libraries(app_calc_interval_trans threatdist navviz utils)
+target_link_libraries(app_calc_interval_trans threatdist utils)
