--- a/src/navigation/ground/reachability/apps/CMakeLists.txt
+++ b/src/navigation/ground/reachability/apps/CMakeLists.txt
@@ -3,4 +3,4 @@
 
 ## tests
 add_executable(gen_tstate_transition gen_tstate_transition.cpp)
-target_link_libraries(gen_tstate_transition reachability utils navviz)
+target_link_libraries(gen_tstate_transition reachability utils)
