--- a/src/modules/drive/CMakeLists.txt
+++ b/src/modules/drive/CMakeLists.txt
@@ -8,3 +8,4 @@ add_subdirectory(local_planner)
 # add_subdirectory(threat_field)
 # add_subdirectory(connectivity)
 # add_subdirectory(traffic_sim)
+# add_subdirectory(traffic_viz)
