--- a/src/modules/drive/CMakeLists.txt
+++ b/src/modules/drive/CMakeLists.txt
@@ -1,5 +1,5 @@
 ## Add other sub source directories
-add_subdirectory(cav_motion)
+add_subdirectory(mission)
 
 add_subdirectory(road_map)
 add_subdirectory(traffic_map)
