--- a/src/modules/drive/mission/CMakeLists.txt
+++ b/src/modules/drive/mission/CMakeLists.txt
@@ -11,9 +11,9 @@ set(CAV_MOTION_LIB_SRC
     src/reference_route.cpp
     src/route_planner.cpp
     # motion manager
-    src/cav_motion_manager.cpp
+    src/motion_manager.cpp
     # mission control
-    src/cav_mission_control.cpp
+    src/mission_control.cpp
 )
 add_library(cav_motion STATIC ${CAV_MOTION_LIB_SRC})
 target_link_libraries(cav_motion adtypes datalink traffic local_planner utils)
