--- a/src/modules/simulator/simlite/test/CMakeLists.txt
+++ b/src/modules/simulator/simlite/test/CMakeLists.txt
@@ -1,2 +1,5 @@
 add_executable(test_odeint test_odeint.cpp)
 target_link_libraries(test_odeint odeint)
+
+add_executable(test_robot test_robot.cpp)
+target_link_libraries(test_robot simlite model)
