--- a/src/modules/CMakeLists.txt
+++ b/src/modules/CMakeLists.txt
@@ -3,7 +3,7 @@ add_subdirectory(navtypes)
 add_subdirectory(diagnosis)
 add_subdirectory(control)
 add_subdirectory(planning)
-add_subdirectory(datalink)
+# add_subdirectory(datalink)
 add_subdirectory(utilities)
 add_subdirectory(simulator)
 add_subdirectory(visualization)
