--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -11,9 +11,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Install dependencies
-      run: sudo apt-get update && \
-           sudo apt-get install -y libeigen3-dev \
-                                  libcgal-dev 
+      run: sudo apt-get update && sudo apt-get install -y libeigen3-dev libcgal-dev  
     - name: Update submodules
       run: git submodule update --init --recursive      
     - name: Create Build Environment
