--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Install dependencies
-      run: sudo apt-get update && sudo apt-get install -y libeigen3-dev libcgal-dev libgsl-dev libtbb-dev libboost-dev libboost-filesystem-dev
+      run: sudo apt-get update && sudo apt-get install -y libeigen3-dev libcgal-dev libgsl-dev libtbb-dev libboost-dev libboost-filesystem-dev xorg-dev libglu1-mesa-dev
     - name: Update submodules
       run: git submodule update --init --recursive      
     - name: Create Build Environment
