--- a/src/modules/planning/decision/reachability/CMakeLists.txt
+++ b/src/modules/planning/decision/reachability/CMakeLists.txt
@@ -36,5 +36,5 @@ target_include_directories(reachability PUBLIC
 add_subdirectory(apps)
 
 if(BUILD_TESTING)
-  add_subdirectory(tests)
+#   add_subdirectory(tests)
 endif()
