--- a/src/modules/planning/geometry2/CMakeLists.txt
+++ b/src/modules/planning/geometry2/CMakeLists.txt
@@ -20,6 +20,6 @@ target_include_directories(geometry2 PUBLIC
 	PRIVATE src)
 
 # Add executables
-# if(BUILD_TESTING)
+# if(BUILD_TESTS)
 	add_subdirectory(test)
 # endif()
