--- a/src/modules/planning/geometry2/test/CMakeLists.txt
+++ b/src/modules/planning/geometry2/test/CMakeLists.txt
@@ -1,42 +1,7 @@
-# Dependency libraries
-#find_package(LIBRARY_NAME REQUIRED)
-
-## tests
-add_executable(test_polyline test_polyline.cpp)
-target_link_libraries(test_polyline geometry2)
-
-# add_executable(test_polygon test_polygon.cpp)
-# target_link_libraries(test_polygon geometry2)
-
-# add_executable(test_cspline test_cspline.cpp)
-# target_link_libraries(test_cspline geometry2)
-
-# add_executable(test_pcurve test_pcurve.cpp)
-# target_link_libraries(test_pcurve geometry2)
-
-# add_executable(test_polynomial test_polynomial.cpp)
-# target_link_libraries(test_polynomial geometry2)
-
-# add_executable(test_polyline_draw test_polyline_draw.cpp )
-# target_link_libraries(test_polyline_draw geometry2)
-
-# add_executable(test_pcurve_draw test_pcurve_draw.cpp)
-# target_link_libraries(test_pcurve_draw geometry2)
-
-# add_executable(test_cspline_draw test_cspline_draw.cpp )
-# target_link_libraries(test_cspline_draw geometry2)
-
-# add_executable(test_polygon_draw test_polygon_draw.cpp )
-# target_link_libraries(test_polygon_draw geometry2)
-
-# add_executable(test_dist_draw test_dist_draw.cpp )
-# target_link_libraries(test_dist_draw geometry2)
-
-# add_executable(test_pcurve_viz test_pcurve_viz.cpp)
-# target_link_libraries(test_pcurve_viz geometry2)
-
-# add_executable(test_polygon_viz test_polygon_viz.cpp )
-# target_link_libraries(test_polygon_viz geometry2)
-
-# add_executable(test_cspline_viz test_cspline_viz.cpp )
-# target_link_libraries(test_cspline_viz geometry2)
+# add unit test
+add_executable(utest_geometry 
+    utest_polyline.cpp)
+target_link_libraries(utest_geometry geometry2 gtest gmock gtest_main)
+ 
+gtest_discover_tests(utest_geometry)
+add_test(NAME planning::geometry COMMAND utest_geometry)
