continued working on geometry2: saved work on cubic spline

--- a/src/modules/planning/geometry2/test/CMakeLists.txt
+++ b/src/modules/planning/geometry2/test/CMakeLists.txt
@@ -1,6 +1,7 @@
 # add unit test
 add_executable(utest_geometry 
-    utest_polyline.cpp)
+    utest_polyline.cpp
+    utest_cubicspline.cpp)
 target_link_libraries(utest_geometry geometry2 gtest gmock gtest_main)
  
 gtest_discover_tests(utest_geometry)
