--- a/src/modules/planning/CMakeLists.txt
+++ b/src/modules/planning/CMakeLists.txt
@@ -1,9 +1,11 @@
 ## Add sub source directories
 add_subdirectory(geometry)
-add_subdirectory(geometry2)
 add_subdirectory(decomp)
 add_subdirectory(graph)
 add_subdirectory(sampling)
 add_subdirectory(state_lattice)
 add_subdirectory(decision)
 add_subdirectory(third_party)
+
+# under revision
+add_subdirectory(geometry2)
