--- a/src/modules/planning/geometry2/test/CMakeLists.txt
+++ b/src/modules/planning/geometry2/test/CMakeLists.txt
@@ -6,3 +6,5 @@ target_link_libraries(utest_geometry geometry2 gtest gmock gtest_main)
  
 gtest_discover_tests(utest_geometry)
 add_test(NAME planning::geometry COMMAND utest_geometry)
+
+add_subdirectory(devel)
