added visualization for parametric curve

--- a/src/modules/planning/geometry/test/CMakeLists.txt
+++ b/src/modules/planning/geometry/test/CMakeLists.txt
@@ -2,7 +2,7 @@
 add_executable(utest_geometry 
     utest_polyline.cpp
     utest_cubicspline.cpp)
-target_link_libraries(utest_geometry geometry2 gtest gmock gtest_main)
+target_link_libraries(utest_geometry geometry gtest gmock gtest_main)
  
 gtest_discover_tests(utest_geometry)
 add_test(NAME planning::geometry COMMAND utest_geometry)
