--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,9 @@
 [submodule "src/third_party/googletest"]
-	path = src/unit_test/googletest
+	path = src/third_party/googletest
 	url = https://github.com/google/googletest.git
+[submodule "src/modules/utilities/third_party/spdlog"]
+	path = src/modules/utilities/third_party/spdlog
+	url = https://github.com/gabime/spdlog.git
 [submodule "src/modules/planning/graph"]
 	path = src/modules/planning/graph
 	url = https://github.com/rxdu/libgraph.git
