--- a/src/modules/CMakeLists.txt
+++ b/src/modules/CMakeLists.txt
@@ -1,5 +1,6 @@
 ## Add source directories
-add_subdirectory(cvdraw)
-add_subdirectory(control)
+add_subdirectory(mapping)
 add_subdirectory(planning)
+add_subdirectory(control)
+add_subdirectory(cvdraw)
 add_subdirectory(utilities)
