--- a/src/modules/utilities/CMakeLists.txt
+++ b/src/modules/utilities/CMakeLists.txt
@@ -4,5 +4,5 @@ add_subdirectory(image_io)
 add_subdirectory(logging)
 add_subdirectory(third_party)
 
-add_library(utils INTERFACE)
-target_link_libraries(utils INTERFACE file_io image_io logging stopwatch csv_parser)
+add_library(utilities INTERFACE)
+target_link_libraries(utilities INTERFACE file_io image_io logging stopwatch csv_parser)
