--- a/src/modules/utilities/file_io/CMakeLists.txt
+++ b/src/modules/utilities/file_io/CMakeLists.txt
@@ -1,4 +1,4 @@
 add_library(file_io INTERFACE)
 target_include_directories(file_io INTERFACE
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     $<INSTALL_INTERFACE:include>)
