--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "src/modules/planning/graph"]
 	path = src/modules/planning/graph
 	url = https://github.com/rxdu/libgraph.git
+[submodule "src/third_party/googletest"]
+	path = src/third_party/googletest
+	url = https://github.com/google/googletest.git
