--- a/src/modules/planning/decision/prediction/apps/CMakeLists.txt
+++ b/src/modules/planning/decision/prediction/apps/CMakeLists.txt
@@ -3,7 +3,7 @@
 
 ## tests
 add_executable(app_calc_transition app_calc_transition.cpp)
-target_link_libraries(app_calc_transition threatdist utils)
+target_link_libraries(app_calc_transition threatdist utilities)
 
 add_executable(app_calc_interval_trans app_calc_interval_trans.cpp)
-target_link_libraries(app_calc_interval_trans threatdist utils)
+target_link_libraries(app_calc_interval_trans threatdist utilities)
