--- a/src/modules/CMakeLists.txt
+++ b/src/modules/CMakeLists.txt
@@ -2,5 +2,5 @@
 add_subdirectory(mapping)
 add_subdirectory(planning)
 add_subdirectory(control)
-add_subdirectory(cvdraw)
 add_subdirectory(utilities)
+add_subdirectory(visualization)
