--- a/src/modules/utilities/file_io/CMakeLists.txt
+++ b/src/modules/utilities/file_io/CMakeLists.txt
@@ -2,3 +2,7 @@ add_library(file_io INTERFACE)
 target_include_directories(file_io INTERFACE
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     $<INSTALL_INTERFACE:include>)
+
+if(BUILD_TESTS)
+    add_subdirectory(test)
+endif()
