--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -1,6 +1,10 @@
 name: CMake
 
-on: [push]
+on:
+  push:
+    branches: [ master, devel ]
+  pull_request:
+    branches: [ master ]
 
 env:
   BUILD_TYPE: Release
@@ -11,7 +15,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Install dependencies
-      run: sudo apt-get update && sudo apt-get install -y libeigen3-dev libgsl-dev libtbb-dev libboost-all-dev libopencv-dev
+      run: sudo apt-get update && sudo apt-get install -y libboost-all-dev libeigen3-dev libtbb-dev libopencv-dev
     - name: Update submodules
       run: git submodule update --init --recursive      
     - name: Create Build Environment
@@ -25,7 +29,26 @@ jobs:
       shell: bash
       run: cmake --build . --config $BUILD_TYPE
 
-#     - name: Test
-#       working-directory: ${{runner.workspace}}/build
-#       shell: bash
-#       run: ctest -C $BUILD_TYPE
+  test:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-18.04
+    steps:
+        - uses: actions/checkout@v2
+        - name: Install dependencies
+          run: sudo apt-get update && sudo apt-get install -y libboost-all-dev libeigen3-dev libtbb-dev libopencv-dev
+        - name: Update submodules
+          run: git submodule update --init --recursive      
+        - name: Create Build Environment
+          run: cmake -E make_directory ${{runner.workspace}}/build
+        - name: Configure CMake
+          shell: bash
+          working-directory: ${{runner.workspace}}/build
+          run: cmake $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DBUILD_TESTING=ON
+        - name: Build
+          working-directory: ${{runner.workspace}}/build
+          shell: bash
+          run: cmake --build . --config $BUILD_TYPE
+        - name: Build
+          working-directory: ${{runner.workspace}}/build
+          shell: bash
+          run: cmake --build . --config $BUILD_TYPE
