--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Install dependencies
-      run: sudo apt-get update && sudo apt-get install -y libboost-all-dev libeigen3-dev libtbb-dev libopencv-dev
+      run: sudo apt-get update && sudo apt-get install -y libboost-all-dev libgsl-dev libeigen3-dev libtbb-dev libopencv-dev
     - name: Update submodules
       run: git submodule update --init --recursive      
     - name: Create Build Environment
@@ -35,7 +35,7 @@ jobs:
     steps:
         - uses: actions/checkout@v2
         - name: Install dependencies
-          run: sudo apt-get update && sudo apt-get install -y libboost-all-dev libeigen3-dev libtbb-dev libopencv-dev
+          run: sudo apt-get update && sudo apt-get install -y libboost-all-dev libgsl-dev libeigen3-dev libtbb-dev libopencv-dev
         - name: Update submodules
           run: git submodule update --init --recursive      
         - name: Create Build Environment
