updated data folder, added yaml-cpp lib

--- a/src/modules/utilities/CMakeLists.txt
+++ b/src/modules/utilities/CMakeLists.txt
@@ -5,4 +5,4 @@ add_subdirectory(logging)
 add_subdirectory(third_party)
 
 add_library(utilities INTERFACE)
-target_link_libraries(utilities INTERFACE file_io logging stopwatch csv_parser)
+target_link_libraries(utilities INTERFACE file_io logging stopwatch csv_parser yaml-cpp)
