saved work on map

--- a/src/modules/mapping/map/CMakeLists.txt
+++ b/src/modules/mapping/map/CMakeLists.txt
@@ -1,11 +1,11 @@
 ## Dependency libraries
-# find_package(Eigen3 REQUIRED)
+find_package(Eigen3 REQUIRED NO_MODULE)
 
 ## Add libraries
 add_library(map 
-    src/map_io.cpp
+    src/pgm_map.cpp
 )
-target_link_libraries(map cvdraw)
+target_link_libraries(map Eigen3::Eigen cvdraw)
 target_compile_definitions(map PUBLIC ENABLE_VISUAL)
 target_include_directories(map PUBLIC
 	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
@@ -13,6 +13,6 @@ target_include_directories(map PUBLIC
 	PRIVATE src)
 
 # Add executables
-# if(BUILD_TESTS)
-# 	add_subdirectory(test)
-# endif()
+if(BUILD_TESTS)
+	add_subdirectory(test)
+endif()
