--- a/src/modules/planning/decision/markov/CMakeLists.txt
+++ b/src/modules/planning/decision/markov/CMakeLists.txt
@@ -1,11 +1,11 @@
 ## Dependency libraries
 ## Find Eigen3
-find_package(Eigen3 REQUIRED)
+find_package(Eigen3 REQUIRED NO_MODULE)
 find_package(Boost REQUIRED)
 
 ## Add libraries
 add_library(markov src/markov_chain.cpp)
-target_link_libraries(markov utilities ${Boost_LIBRARIES})
+target_link_libraries(markov utilities Eigen3::Eigen ${Boost_LIBRARIES})
 target_include_directories(markov PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     $<BUILD_INTERFACE:${EIGEN3_INCLUDE_DIR}>
