--- a/src/modules/planning/geometry/CMakeLists.txt
+++ b/src/modules/planning/geometry/CMakeLists.txt
@@ -1,5 +1,5 @@
 ## Dependency libraries
-find_package(Eigen3 REQUIRED)
+find_package(Eigen3 REQUIRED NO_MODULE)
 find_package(TBB REQUIRED)
 
 ## Add libraries
@@ -9,7 +9,7 @@ add_library(geometry STATIC
     src/parametric_curve.cpp
     src/polygon.cpp
 )
-target_link_libraries(geometry cvdraw ${TBB_LIBRARIES})
+target_link_libraries(geometry cvdraw Eigen3::Eigen ${TBB_LIBRARIES})
 target_compile_definitions(geometry PUBLIC ENABLE_VISUAL)
 target_include_directories(geometry PUBLIC
 	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
