module: added interface and driver module from robosw

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,8 @@
 # add_subdirectory(dview)
 
 # Modules
+add_subdirectory(interface)
+add_subdirectory(driver)
 add_subdirectory(mapping)
 add_subdirectory(planning)
 add_subdirectory(control)
