--- a/src/apps/tbot/CMakeLists.txt
+++ b/src/apps/tbot/CMakeLists.txt
@@ -10,3 +10,6 @@ target_include_directories(app_tbot_widget PUBLIC
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
         $<INSTALL_INTERFACE:include>
         PRIVATE src)
+
+add_executable(tbot_speed_control src/tbot_speed_control.cpp)
+target_link_libraries(tbot_speed_control interface pid async_port)
