control: started working on a multidimensional pid controller

--- a/src/control/pid/CMakeLists.txt
+++ b/src/control/pid/CMakeLists.txt
@@ -1,9 +1,10 @@
 ## Dependency libraries
+find_package(Eigen3 REQUIRED NO_MODULE)
 
 ## Add libraries
 add_library(pid
         src/pid_controller.cpp)
-#target_link_libraries(map Eigen3::Eigen cvdraw)
+target_link_libraries(pid PUBLIC Eigen3::Eigen)
 target_include_directories(pid PUBLIC
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
         $<INSTALL_INTERFACE:include>
