--- a/src/apps/tbot/CMakeLists.txt
+++ b/src/apps/tbot/CMakeLists.txt
@@ -4,8 +4,9 @@ add_executable(app_tbot_widget
         src/control_panel.cpp
         src/plot_panel.cpp
         src/canbus_panel.cpp
-        src/messenger.cpp)
-target_link_libraries(app_tbot_widget interface imview async_port)
+        src/messenger.cpp
+        src/speed_controller.cpp)
+target_link_libraries(app_tbot_widget interface imview async_port pid)
 target_include_directories(app_tbot_widget PUBLIC
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
         $<INSTALL_INTERFACE:include>
