control: merged multiple pkgs into one control module

--- a/src/control/CMakeLists.txt
+++ b/src/control/CMakeLists.txt
@@ -1,3 +1,21 @@
-## Add sub source directories
-add_subdirectory(model)
-add_subdirectory(pid)
+## Dependency libraries
+find_package(Boost REQUIRED)
+find_package(Eigen3 REQUIRED NO_MODULE)
+
+## Add libraries
+# add_library(model INTERFACE)
+# target_link_libraries(model INTERFACE utilities ${Boost_LIBRARIES})
+# target_include_directories(model INTERFACE
+# 	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+# 	$<INSTALL_INTERFACE:include>)
+
+add_library(control src/pid_controller.cpp)
+target_link_libraries(control PUBLIC utilities Eigen3::Eigen ${Boost_LIBRARIES})
+target_include_directories(control PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:include>
+    PRIVATE src)
+
+if(BUILD_TESTS)
+    add_subdirectory(test)
+endif()
