--- a/src/planning/decision/reachability/CMakeLists.txt
+++ b/src/planning/decision/reachability/CMakeLists.txt
@@ -24,7 +24,7 @@ set(REACHABILITY_LIB_SRC
     src/car_longitudinal_model.cpp
 )
 add_library(reachability STATIC ${REACHABILITY_LIB_SRC})
-target_link_libraries(reachability markov model utilities Eigen3::Eigen ${GSL_LIBRARIES})
+target_link_libraries(reachability markov control utilities Eigen3::Eigen ${GSL_LIBRARIES})
 # target_compile_definitions(reachability PUBLIC "-DEIGEN_STACK_ALLOCATION_LIMIT=0")
 target_include_directories(reachability PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
