vesc: added vesc status package parsing

--- a/src/driver/CMakeLists.txt
+++ b/src/driver/CMakeLists.txt
@@ -1,19 +1,23 @@
 find_package(Threads REQUIRED)
 
-add_library(driver STATIC 
-    # interface
-    src/async_port/async_serial.cpp
-    src/async_port/async_can.cpp
-    # imu sensor
-    src/imu_driver/ch_serial.c
-    src/imu_driver/imu_hipnuc.cpp)
+add_library(driver STATIC
+        # interface
+        src/async_port/async_serial.cpp
+        src/async_port/async_can.cpp
+        # imu sensor
+        src/imu_driver/ch_serial.c
+        src/imu_driver/imu_hipnuc.cpp
+        # vesc
+        src/vesc_driver/vesc_can_interface.cpp
+        src/vesc_driver/vesc_packet.cpp
+        src/vesc_driver/vesc_packet_factory.cpp)
 target_link_libraries(driver PUBLIC interface Threads::Threads)
 target_compile_definitions(driver PUBLIC ASIO_ENABLE_OLD_SERVICES)
 target_include_directories(driver PUBLIC
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-    $<INSTALL_INTERFACE:include>
-    PRIVATE src)
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+        $<INSTALL_INTERFACE:include>
+        PRIVATE src)
 
-if(BUILD_TESTS)
+if (BUILD_TESTS)
     add_subdirectory(test)
-endif()
+endif ()
