--- a/src/driver/test/CMakeLists.txt
+++ b/src/driver/test/CMakeLists.txt
@@ -1,2 +1,9 @@
-add_executable(test_hipnuc test_hipnuc.cpp)
-target_link_libraries(test_hipnuc driver)
+# add unit test
+add_executable(utest_driver
+    utest_vesc_packet.cpp)
+target_link_libraries(utest_driver PRIVATE driver gtest gmock gtest_main)
+ 
+gtest_discover_tests(utest_driver)
+add_test(NAME driver::utest_driver COMMAND utest_driver)
+
+add_subdirectory(devel)
