--- a/src/control/CMakeLists.txt
+++ b/src/control/CMakeLists.txt
@@ -19,3 +19,14 @@ target_include_directories(control PUBLIC
 if(BUILD_TESTS)
     add_subdirectory(test)
 endif()
+
+## installation configuration
+#install(TARGETS control
+#        EXPORT roboswTargets
+#        LIBRARY DESTINATION lib
+#        ARCHIVE DESTINATION lib
+#        RUNTIME DESTINATION bin
+#        INCLUDES DESTINATION include)
+#
+#install(DIRECTORY include/
+#        DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/control)
