--- a/src/driver/CMakeLists.txt
+++ b/src/driver/CMakeLists.txt
@@ -21,3 +21,14 @@ target_include_directories(driver PUBLIC
 if (BUILD_TESTS)
     add_subdirectory(test)
 endif ()
+
+## installation configuration
+install(TARGETS driver
+        EXPORT roboswTargets
+        LIBRARY DESTINATION lib
+        ARCHIVE DESTINATION lib
+        RUNTIME DESTINATION bin
+        INCLUDES DESTINATION include)
+
+install(DIRECTORY include/
+        DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/driver)
