--- a/src/interface/CMakeLists.txt
+++ b/src/interface/CMakeLists.txt
@@ -2,3 +2,14 @@ add_library(interface INTERFACE)
 target_include_directories(interface INTERFACE
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     $<INSTALL_INTERFACE:include>)
+
+## installation configuration
+install(TARGETS interface
+        EXPORT roboswTargets
+        LIBRARY DESTINATION lib
+        ARCHIVE DESTINATION lib
+        RUNTIME DESTINATION bin
+        INCLUDES DESTINATION include)
+
+install(DIRECTORY include/
+        DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/interface)
