--- a/.gitmodules
+++ b/.gitmodules
@@ -1,8 +1,8 @@
 [submodule "src/library/googletest"]
-	path = src/library/googletest
+	path = extern/googletest
 	url = https://github.com/google/googletest.git
 [submodule "src/library/spdlog"]
-	path = src/library/spdlog
+	path = extern/spdlog
 	url = https://github.com/gabime/spdlog.git
 [submodule "src/planning/graph"]
 	path = src/planning/graph
@@ -14,8 +14,8 @@
 	path = src/visualization/imcore/implot
 	url = https://github.com/epezent/implot.git
 [submodule "src/library/rapidcsv"]
-	path = src/library/rapidcsv
+	path = extern/rapidcsv
 	url = https://github.com/d99kris/rapidcsv.git
 [submodule "src/library/stopwatch"]
-	path = src/library/stopwatch
+	path = extern/stopwatch
 	url = https://github.com/rxdu/stopwatch.git
