cmake: updated cmake option default values

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ if(CCACHE_PROGRAM)
 endif()
 
 # # Project Options
-option(BUILD_TESTING "Build tests" ON)
+option(BUILD_TESTING "Build tests" OFF)
 option(ENABLE_TARGET_DESKTOP "Enable desktop-only modules" ON)
 option(ENABLE_LOGGING "Enable logging" ON)
 option(STATIC_CHECK "Enable static check" OFF)
